# geronimo

./: .gitignore  README.md  justfile  meson.build
data/: geronimo.gresource.xml  meson.build
data/scss/: _BatteryMode.scss  _Button.scss  _CenterPanel.scss  _Colors.scss  _ControlPanel.scss  _DynamicIsland.scss  _Mpris.scss  _OnScreenDisplay.scss  _Popup.scss  _QuickSettings.scss  _Runner.scss  _StatusBar.scss  _adw.scss  main.scss  meson.build
data/ui/: BluetoothPanel.blp  CenterPanel.blp  ControlPanel.blp  CryptoWallet.blp  DynamicIsland.blp  NetworkPanel.blp  OnScreenDisplay.blp  QuickPanel.blp  QuickSettings.blp  QuickSettingsButton.blp  Runner.blp  RunnerButton.blp  StatusBar.blp
data/ui/Utils/: Popup.blp
data/ui/Widgets/: BatteryMode.blp  BluetoothPanel.blp  HeaderPanel.blp  QuickPanel.blp
data/ui/utils/: FlatButton.blp
data/ui/widgets/: Mpris.blp  NetworkPanel.blp  QuickPanel.blp
src/: App.vala  BluetoothPanel.vala  CenterPanel.vala  ControlPanel.vala  Daemon.vala  DynamicIsland.vala  Main.vala  Mpris.vala  NetworkPanel.vala  OnScreenDisplay.vala  QuickPanel.vala  QuickSettings.vala  QuickSettingsButton.vala  Runner.vala  RunnerButton.vala  StatusBar.vala  meson.build
src/Utils/: Crypto.vala  Popup.vala  UPower.vala
src/Widgets/: BatteryMode.vala  BluetoothPanel.vala  CryptoWallet.vala  HeaderPanel.vala  Mpris.vala  NetworkPanel.vala  QuickPanel.vala
src/core/: App.vala  Main.vala
src/utils/: Calculator.vala  FlatButton.vala  Popup.vala  UPower.vala
src/widgets/: BatteryMode.vala  BluetoothPanel.vala  CryptoWallet.vala  HeaderPanel.vala  Mpris.vala  NetworkPanel.vala  QuickPanel.vala
